// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ConformerGenerator > should generate conformers 1`] = `
"#1
Actelion Java MolfileCreator 1.0

 15 14  0  0  0  0  0  0  0  0999 V2000
    2.4884   -1.2899   -0.1310 C   0  0  0  0  0  0  0  0  0  0  0  0
    2.7147    0.2565   -0.7231 O   0  0  0  0  0  0  0  0  0  0  0  0
    1.2915    1.1309   -0.6418 C   0  0  0  0  0  0  0  0  0  0  0  0
    0.2758    0.7672   -2.1045 C   0  0  0  0  0  0  0  0  0  0  0  0
   -0.2551   -0.8183   -2.0317 O   0  0  0  0  0  0  0  0  0  0  0  0
   -1.4753   -0.9472   -0.9069 N   0  0  0  0  0  0  0  0  0  0  0  0
    2.2000   -1.2353    0.9891 H   0  0  0  0  0  0  0  0  0  0  0  0
    3.4677   -1.8941   -0.2453 H   0  0  0  0  0  0  0  0  0  0  0  0
    1.6428   -1.8158   -0.7207 H   0  0  0  0  0  0  0  0  0  0  0  0
    1.5303    2.2635   -0.6147 H   0  0  0  0  0  0  0  0  0  0  0  0
    0.7081    0.8372    0.3129 H   0  0  0  0  0  0  0  0  0  0  0  0
   -0.6345    1.4817   -2.1275 H   0  0  0  0  0  0  0  0  0  0  0  0
    0.9083    0.9192   -3.0602 H   0  0  0  0  0  0  0  0  0  0  0  0
   -1.0842   -0.8674    0.0394 H   0  0  0  0  0  0  0  0  0  0  0  0
   -1.9463   -1.8530   -1.0108 H   0  0  0  0  0  0  0  0  0  0  0  0
  1  2  1  0  0  0  0
  2  3  1  0  0  0  0
  3  4  1  0  0  0  0
  4  5  1  0  0  0  0
  5  6  1  0  0  0  0
  1  7  1  0  0  0  0
  1  8  1  0  0  0  0
  1  9  1  0  0  0  0
  3 10  1  0  0  0  0
  3 11  1  0  0  0  0
  4 12  1  0  0  0  0
  4 13  1  0  0  0  0
  6 14  1  0  0  0  0
  6 15  1  0  0  0  0
M  END
"
`;

exports[`ConformerGenerator > should generate conformers 2`] = `
"#2
Actelion Java MolfileCreator 1.0

 15 14  0  0  0  0  0  0  0  0999 V2000
    3.6730    0.5693    0.6100 C   0  0  0  0  0  0  0  0  0  0  0  0
    2.7147    0.2565   -0.7231 O   0  0  0  0  0  0  0  0  0  0  0  0
    1.2915    1.1309   -0.6418 C   0  0  0  0  0  0  0  0  0  0  0  0
    0.2758    0.7672   -2.1045 C   0  0  0  0  0  0  0  0  0  0  0  0
    1.0205    1.3914   -3.4671 O   0  0  0  0  0  0  0  0  0  0  0  0
    0.0944    1.0611   -4.8101 N   0  0  0  0  0  0  0  0  0  0  0  0
    3.9742    1.6873    0.6142 H   0  0  0  0  0  0  0  0  0  0  0  0
    4.6259   -0.0839    0.5620 H   0  0  0  0  0  0  0  0  0  0  0  0
    3.0890    0.3245    1.5787 H   0  0  0  0  0  0  0  0  0  0  0  0
    1.5303    2.2635   -0.6147 H   0  0  0  0  0  0  0  0  0  0  0  0
    0.7081    0.8372    0.3129 H   0  0  0  0  0  0  0  0  0  0  0  0
    0.1589   -0.3791   -2.2157 H   0  0  0  0  0  0  0  0  0  0  0  0
   -0.7672    1.2498   -1.9790 H   0  0  0  0  0  0  0  0  0  0  0  0
    0.1585    0.0618   -5.0383 H   0  0  0  0  0  0  0  0  0  0  0  0
    0.4272    1.6189   -5.6046 H   0  0  0  0  0  0  0  0  0  0  0  0
  1  2  1  0  0  0  0
  2  3  1  0  0  0  0
  3  4  1  0  0  0  0
  4  5  1  0  0  0  0
  5  6  1  0  0  0  0
  1  7  1  0  0  0  0
  1  8  1  0  0  0  0
  1  9  1  0  0  0  0
  3 10  1  0  0  0  0
  3 11  1  0  0  0  0
  4 12  1  0  0  0  0
  4 13  1  0  0  0  0
  6 14  1  0  0  0  0
  6 15  1  0  0  0  0
M  END
"
`;
